# AdaptiveSync

./: Makefile  NNDP_pr1.ipynb  README.md
benchmarks/: benchmark_concurrency.sh  benchmark_delta_sync.sh  benchmark_zero_copy.sh
client/: Cargo.toml  build.rs
client/src/: delta_sync.rs  file_ops.rs  hashing.rs  lib.rs  tcp_client.rs  wire.rs
proto/: adaptivesync.proto
server/: CMakeLists.txt
server/include/: delta_sync_handler.h  file_manager.h  file_mutex.h  negotiator.h  server.h  session.h  wire_protocol.h  zero_copy_sender.h
server/src/: delta_sync_handler.cpp  file_manager.cpp  file_mutex.cpp  main.cpp  negotiator.cpp  server.cpp  session.cpp  zero_copy_sender.cpp
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
ui/src/components/: ConnectionStatus.tsx  FileList.tsx  FileUpload.tsx  TransferProgress.tsx
ui/src/styles/: global.css
